--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,18 @@
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
-ul{
+
+ul {
     list-style: none;
+}
+body{
+    background: url(../style/img/background.jfif);
+    background-size: 100% 1038px;
+    background-repeat: no-repeat;
+    
+
 }
 
 html,
@@ -14,82 +22,207 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #111111;
-
+    color: #FFFFFF;
+    font-family: "Cormorant Garamond", serif;
+   
 }
 
-body {
-    background: url(./img/background.jfif);
 
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-color: #000000a2;
-    background-blend-mode: color;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "EB Garamond", serif;
+}
+
+header {
+    width: 1296px;
+    margin: 30px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   
+}
+
+hr {
+    border-bottom: solid 1px #FFFFFF;
+    width: 1296px;
+    margin: auto;
+    opacity: .5;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    gap: 80px;
+}
+
+nav a {
+    color: #FFFFFF;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+nav a:hover::after {
+    content: '';
+    background-color: #CDAA7D;
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    top: 25px;
+}
+
+nav a:hover {
+    color: #CDAA7D;
+}
+
+.logo {
+    margin: 0 40px;
+}
+
+.logo::after {
+    content: '';
+    opacity: 0;
 }
 
 main {
     flex: auto;
 }
 
-header {
-    width: 1280px;
-    margin: 30px auto;
-}
-
-.nav_contact, #menu {
+input {
     display: none;
 }
 
-nav {
+.nav_contacts {
     display: flex;
-    gap: 80px;
-    align-items: center;
     justify-content: center;
-
-}
-
-.logo {
-    padding: 0 40px;
-}
-
-#menu:checked ~ .nav_contact {
-    display: flex;
-
-}
-
-nav a{
-    text-decoration: none;
-    color: #ffffff;
-}
-nav a:hover{
-    color: #CDAA7D;
-    border-bottom: 1px solid #CDAA7D;
-}
-.instagram:hover path{
-    stroke: #CDAA7D;
-}
-.instagram,.icon{
-    border: none !important;
-}
-
-
-.nav_contact {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    width: 400px;
-    background-color: black;
     flex-direction: column;
-    color: #ffffff;
-    align-items: center;
-    justify-content: center;
+    gap: 60px;
+    position: fixed;
+    top: 0;
+    right: 0;
     width: 475px;
-    height: 1038px;
+    height: 100%;
+    background-color: #111111;
+    padding: 80px;
+    z-index: 10;
+    transform: translate(475px, 0px);
+    transition: all linear .3s;
+    border: 1px solid #ffffff83;
+
 }
 
-.nav_contact label{
-    margin-top: 42px;
-    margin-left: 82px;
+.nav_contacts label {
     position: absolute;
+    top: 40px;
+    left: 80px;
+    cursor: pointer;
+
+}
+
+.nav_contacts ul {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    
+}
+.nav_contacts ul li:first-child{
+    margin-bottom: 10px;
+}
+
+#menu:checked~.nav_contacts {
+    transform: translate(0, 0px);
+}
+
+.menu:hover,.logo:hover,.instagram:hover {
+    color: #CDAA7D;
+    cursor: pointer;
+}
+
+.menu,.instagram,.logo {
+    color: #FFFFFF;
+}
+.banner h1{
+    font-size: 72px;
+    font-weight: 500;
+    line-height: 86px;
+    text-align: center;
+    
+}
+
+.banner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+ .comment p {
+    text-align: center;
+    font-weight: 700;
+    font-size: 27px;
+    margin-top: 60px;
+    width: 856px;
+   
+ }
+ .comment{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 120px;
+ }
+.services {
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+grid-template-rows: repeat(2, 1fr);
+grid-column-gap: 44px;
+grid-row-gap: 44px;
+}
+
+.div1 { grid-area: 1 / 1 / 2 / 2;   
+background-image: url(./img/serv1.svg); 
+width: 396px;
+height: 300px;
+background-repeat: no-repeat;
+margin-left: 312px;
+
+}
+.div2 { grid-area: 1 / 2 / 2 / 3;
+background-image: url(./img/serv2.svg) ;
+background-repeat: no-repeat;
+margin-left: 312px;
+
+
+}
+.div3 { grid-area: 1 / 3 / 2 / 4;
+background-image: url(./img/serv3.svg);
+background-repeat: no-repeat;
+margin-left: 312px;
+
+
+ }
+.div4 { grid-area: 2 / 1 / 3 / 2;
+background-image: url(./img/serv4.svg) ;
+background-repeat: no-repeat;
+margin-left: 312px;
+
+
+}
+.div5 { grid-area: 2 / 2 / 3 / 3;
+background-image: url(./img/serv5.svg) ;
+background-repeat: no-repeat;
+margin-left: 312px;
+
+
+}
+.div6 { grid-area: 2 / 3 / 3 / 4;
+background-image: url(./img/serv6.svg) ;
+background-repeat: no-repeat;
+margin-left: 312px;
+
 
 }
